--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,13 @@
 		</dependency>
 
 		<!-- Your database driver, for example, MySQL -->
+
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+                     <groupId>mysql</groupId>
+                     <artifactId>mysql-connector-java</artifactId>
+                     <version>8.0.33</version>
+                 </dependency>	
+
 
 		<dependency>
 			<groupId>com.h2database</groupId>
