--- a/pom.xml
+++ b/pom.xml
@@ -96,26 +96,25 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco.version}</version>
-				<executions>
-					<execution>
-						<id>jacoco-initialize</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>jacoco-site</id>
-						<phase>package</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+			<<plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			    <version>0.8.8</version> <!-- Or a more recent version -->
+			    <executions>
+				<execution>
+				    <goals>
+					<goal>prepare-agent</goal>
+				    </goals>
+				</execution>
+				<execution>
+				    <id>report</id>
+				    <phase>test</phase>
+				    <goals>
+					<goal>report</goal>
+				    </goals>
+				</execution>
+			    </executions>
+       			 </plugin>
 		</plugins>
 	</build>
 
